Update checkbox labels and structure

--- a/checkboxes.html
+++ b/checkboxes.html
@@ -72,18 +72,19 @@
 <body>
 
 <h1>Custom Checkboxes</h1>
-<label class="container">One
+<label class="container">A
   <input type="checkbox" checked="checked">
   <span class="checkmark"></span>
 </label>
-<label class="container">Two
+<label class="container">B
   <input type="checkbox">
   <span class="checkmark"></span>
 </label>
-<label class="container">Three
+<label class="container">C
   <input type="checkbox">
   <span class="checkmark"></span>
 </label>
 
 </body>
 </html>
+
